server: fixed shell overflow on small screens
readme: updated requirements for installer

--- a/shell_server/server/styles/dashboard.css
+++ b/shell_server/server/styles/dashboard.css
@@ -171,7 +171,7 @@ li.idle::after {
 
 #shell, #command-form {
     max-height: 50vh;
-    overflow: hidden auto;
+    overflow: auto;
 
     margin: .7em 0;
     padding: .5em;
